[package]
name = "audiotags2"
version = "0.3.0"
authors = ["Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>"]
edition = "2021"
description = "Unified IO for different types of audio metadata (maintained fork)"
license = "MIT"
repository = "https://github.com/martpie/audiotags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "1.0.3"
mp4ameta = "0.11.0"
metaflac = "0.2.5"
thiserror = "1.0.31"
audiotags-dev-macro = {path = "./audiotags-dev-macro", version = "0.1.4"}

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
readme-rustdocifier = "0.1.0"

[features]
default = ['from']
from = []
