[package]
name = "audiotags"
version = "0.5.0"
authors = ["Tianyi <ShiTianyi2001@outlook.com>", "Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>"]
edition = "2021"
description = "Unified IO for different types of audio metadata"
license = "MIT"
repository = "https://github.com/TianyiShi2001/audiotags"
keywords = ["id3", "tag", "tags", "audio", "audiotags"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "1.10.0"
mp4ameta = "0.11.0"
metaflac = "0.2.5"
thiserror = "1.0.50"
audiotags-dev-macro = {path = "./audiotags-dev-macro", version = "0.1.4"}

[dev-dependencies]
tempfile = "3.8.1"

[build-dependencies]
readme-rustdocifier = "0.1.1"

[features]
default = ['from']
from = []
